Se cambia la palabra treal por trial

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -245,7 +245,7 @@
 							<h:graphicImage library="img" name="alumno/planetas/planeta4.svg" alt=""/>
 						</div>
 						<div>
-							<div>Free treal!</div>
+							<div>Free trial!</div>
 						</div>
 					</div>
 				</div>
