--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -25,8 +25,8 @@
 		</ul>
 	</aside>
 	<div id="mobil-aside">
-		<p>login teacher</p>
-		<p>login maestro</p>
+		<p><h:link  outcome="/profesor/dashboard.xhtml" value="Login Teachers"/></p>
+		<p><h:link  outcome="/alumno/dashboard.xhtml" value="Login Students"/></p>
 		<p>login administrador</p>
 	</div>
 	<div id="contenido">
