redireccion landing a dashboard administration

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -27,7 +27,7 @@
 	<div id="mobil-aside">
 		<p><h:link  outcome="/profesor/dashboard.xhtml" value="Login Teachers"/></p>
 		<p><h:link  outcome="/alumno/dashboard.xhtml" value="Login Students"/></p>
-		<p>login administrador</p>
+		<p><h:link  outcome="/administracion/dashboard.xhtml" value="Login Administration"/></p>
 	</div>
 	<div id="contenido">
 		<div id="inicio">
@@ -41,7 +41,7 @@
 						<li>
 							<h:link  outcome="/alumno/dashboard.xhtml" value="Login Students"/>
 						</li>
-						<li>Login Administration</li>
+						<li><h:link  outcome="/administracion/dashboard.xhtml" value="Login Administration"/></li>
 					</ul>
 					<div>
 						<span><h:graphicImage library="img" name="/landing/squadron.svg"  alt=""/>squadron</span>
