animacion nave archivo alojado en jboss

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -365,7 +365,7 @@
 
 	<script type="application/javascript" src="https://sdk.amazonaws.com/js/aws-sdk-2.585.0.min.js"></script>
 	<h:outputScript library="js" name="landing/landing.js"/>
-	<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js"></script>
+	<h:outputScript library="js" name="TweenMax.min.js"/>
 	<h:outputScript library="js" name="landing/animacion-espacio.js"/>
     <h:outputScript library="js" name="smtp.js"/>
 	<h:outputScript library="js" name="email.js"/>
