contrasenia agregar nuevo profesor

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -313,7 +313,9 @@
                 let palabra = nombres.innerText.split(':');
                 grupoGrado += palabra[1];
             });
-            console.log(grupoGrado);
+
+
+            // console.log(grupoGrado);
             function generatePDF() {
                 // Choose the element that our invoice is rendered in.
                 // const element = document.getElementById("modal-password");
