--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"  >
 
 <ui:composition template="/template/administracion/dashboard.xhtml">
     <f:metadata>
@@ -223,6 +224,7 @@
                                 </div>
                                 <h:message for="sexo" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
+                            <ui:remove>
                             <div class="uk-width-1-1@s uk-width-1-3@m">
                                 <h:outputLabel value="contrasenia" for="contrasenia"/>
                                 <div class="uk-form-controls">
@@ -236,6 +238,7 @@
                                 </div>
                                 <h:message for="contrasenia" styleClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
+                            </ui:remove>
                             <div class="uk-width-1-1@s uk-width-1-3@m">
                                 <h:outputLabel value="correoEletronico" for="correoEletronico"/>
                                 <div class="uk-form-controls">
@@ -248,11 +251,21 @@
                                 </div>
                                 <h:message for="correoEletronico" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
+                            <div class="uk-width-1-1@m">
+                                <c:forEach begin="1" end="28" var="indice">
+                                    <h:graphicImage library="img" name="alumno/iconos-login/${indice}.svg" />
+                                </c:forEach>
+                                <h:inputHidden id="input-secret-password"
+                                               value="#{administracionProfesorControlador.profesorModelo.contrasenia}">
+                                    <f:validateRequired/>
+                                    <f:converter converterId="tecolotl.web.ContraseniaConvertidor"/>
+                                </h:inputHidden>
+                            </div>
                         </div>
                     </div>
                     <div class="uk-modal-footer uk-flex uk-flex-right">
                         <button type="reset" class="uk-button uk-button-default uk-margin-small-right">#{boton['cancel']}</button>
-                        <h:commandButton value="${boton['add']}" styleClass="uk-button uk-button-secondary" rendered="#{empty administracionProfesorControlador.profesorModelo.id}">
+                        <h:commandButton value="${boton['add']}" onclick="cargaContrasenia()" styleClass="uk-button uk-button-secondary" rendered="#{empty administracionProfesorControlador.profesorModelo.id}">
                             <f:ajax execute="@form"
                                     listener="#{administracionProfesorControlador.inserta()}"
                                     render="@form formulario-tabla"
