--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -51,7 +51,11 @@
                 <div class="uk-card uk-card-default uk-card-small uk-card-hover">
                     <div class="uk-card-header">
                         <div class="uk-grid uk-grid-small">
-                            <div class="uk-width-1-3"><h4 class="uk-text-capitalize"><span class="uk-text-middle">#{administracion['dashboard.titulo']}</span></h4></div>
+                            <div class="uk-width-1-3">
+                                <h4 class="uk-text-capitalize">
+                                    <span class="uk-text-middle">#{administracion['dashboard.titulo']}</span>
+                                </h4>
+                            </div>
                             <div class="uk-width-1-3">
                                 <h:form styleClass="uk-search largo-buscar" id="formulario-filtrado-escuela">
                                     <div class="uk-inline">
