asignar actividad descargables

--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -114,19 +114,19 @@
                                             <div class="uk-inline uk-text-center">
                                                 <span data-uk-tooltip="title: #{profesor['activity.grammar']}"><h:graphicImage  styleClass="uk-svg" library="img" name="icono/decarga.svg" pt:uk-svg=""/></span>
                                                 <div uk-dropdown="">
-                                                    <span>grammar</span>
+                                                    <span>Grammar</span>
                                                 </div>
                                             </div>
                                             <div class="uk-inline uk-text-center">
                                                 <span data-uk-tooltip="title: #{profesor['didactic.guide']}" uk-icon="icon: file-text"/>
                                                 <div uk-dropdown="">
-                                                    <span>didactic guide</span>
+                                                    <span>Lesson Plan</span>
                                                 </div>
                                             </div>
                                             <div class="uk-inline uk-text-center">
                                                 <span data-uk-tooltip="title: #{profesor['activity.cards']}" uk-icon="icon: commenting"/>
                                                 <div uk-dropdown="">
-                                                    <span>cards</span>
+                                                    <span>Disussion Cards</span>
                                                 </div>
                                             </div>
                                             <div class="uk-inline uk-text-center">
